lib/util/time.c
@@ -60,7 +60,7 @@ _PUBLIC_ void clock_gettime_mono(struct timespec *tp)
 	}
 #endif
 /* then try the  monotonic clock: */
-#if CUSTOM_CLOCK_MONOTONIC != CLOCK_REALTIME
+#ifndef CUSTOM_CLOCK_MONOTONIC_IS_REALTIME
 	if (clock_gettime(CUSTOM_CLOCK_MONOTONIC,tp) == 0) {
 		return;
 	}
